--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,15 @@ ul {
   padding: 0;
 }
 
+button.btn {
+  background-image: linear-gradient(to right,#e052a0,#f15c41);
+  border: none;
+}
+
+button.btn:hover {
+  background-image: linear-gradient(to right,#20bf55,#01baef);
+}
+
 #root {
   display: flex;
   justify-content: center;
